--- a/css/style.css
+++ b/css/style.css
@@ -2,9 +2,15 @@ body, html {
   width: 100%;
   height: 100%;
   font-family: Apple Chancery, cursive;
-  margin: 0 auto;
+  margin: 0 auto 30px auto;
   display: block;
   text-align: center;
+  
+
+  background-image: url("../images/white-wood.jpg");
+  background-repeat: no-repeat;
+  background-size: cover;
+  background-attachment: fixed;
 }
 
 .container, h1 {
@@ -26,20 +32,39 @@ h4 {
   border: 1px solid #22aa44;
   box-shadow:  -1px 1px #22aa44, -2px 2px #22aa44, -3px 3px #22aa44, -4px 4px #22aa44, -5px 5px #22aa44;
   background-color: #44cc66;
+  
+}
 
+h4.amiable {
+  background: linear-gradient(to right, #22aa44, #44cc66);
 }
 
 .indifferent {
+  border: 1px solid #9A9D09;
+  box-shadow:  -1px 1px #9A9D09, -2px 2px #9A9D09, -3px 3px #9A9D09, -4px 4px #9A9D09, -5px 5px #9A9D09;
   background-color: #dddd22;
 }
 
+h4.indifferent {
+  background: linear-gradient(to right, #9A9D09, #dddd22);
+
+}
+
 .dubious {
+  border: 1px solid #98131A;
+  box-shadow:  -1px 1px #98131A, -2px 2px #98131A, -3px 3px #98131A, -4px 4px #98131A, -5px 5px #98131A;
   background-color: #dd4444;
+}
+
+h4.dubious {
+  background: linear-gradient(to right, #98131A, #dd4444);
+
 }
 
 .column {
   width: 30%;
   display: inline-block;
+  
 }
 
 .small {
@@ -53,4 +78,10 @@ h4 {
 
 .large {
   width: 303%;
+}
+
+img {
+  border: 1px solid #000;
+  box-sizing: border-box;
+
 }
